--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,7 +18,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up Java 
+    - name: Set up Java 8
       uses: actions/setup-java@v3
       with:
         java-version: '8'
@@ -32,10 +32,8 @@ jobs:
         gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
         gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
 
-    - name: Set artifact version
-      run: |
-        mvn versions:set -DnewVersion=${GITHUB_REF_NAME} -DgenerateBackupPoms=false
-        echo "Set artifact version to: ${GITHUB_REF_NAME}"
+    - name: Set artifact version to ${{ github.ref_name }}
+      run: mvn versions:set -DnewVersion=${{ github.ref_name}} -DgenerateBackupPoms=false
 
     - name: Publish javadocs to Github Pages
       env:
